<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_more_vertical"
        android:title="@string/options"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_favorite"
                android:icon="@drawable/ic_favorite"
                android:title="@string/favorites"
                app:showAsAction="ifRoom|withText"/>

            <item android:id="@+id/action_history"
                android:icon="@drawable/ic_history"
                android:title="@string/history"
                app:showAsAction="ifRoom|withText"/>

            <item android:id="@+id/action_information"
                android:icon="@drawable/ic_information"
                android:title="@string/about"
                app:showAsAction="ifRoom|withText"/>

        </menu>

    </item>

</menu>