<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    tools:context=".ui.search.SearchActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.ENDictionary.TextInputLayout.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/write_the_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:imeOptions="actionDone"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginTop="8dp"
        style="@style/Widget.ENDictionary.Button.Secondary"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_padding"
        android:layout_marginBottom="@dimen/layout_padding"
        app:layout_constraintBottom_toTopOf="@+id/powered_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/list_item_definition"
        app:layout_constraintTop_toBottomOf="@+id/button_search"
        android:visibility="gone" />

    <TextView
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_padding"
        android:layout_marginBottom="@dimen/layout_padding"
        app:layout_constraintBottom_toTopOf="@+id/powered_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_search"
        android:text="@string/lorem_ipsum"/>

    <TextView
        android:id="@+id/powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provided_by_owl_bot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.ENDictionary.TextView.Caption"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>